<resources>
    <string name="app_name">Cafe</string>
    <string name="greetings_tv">Добро пожаловать!</string>
    <string name="input_name_hint">Введите имя</string>
    <string name="input_password_hint">Введите пароль</string>
    <string name="btn_enter">Войти</string>
    <string name="tvHelloWhatDoUWant">Привет, %s! Что желаете?</string>
    <string name="rbTea">Чай</string>
    <string name="rbCoffee">Кофе</string>
    <string name="tvWhatToAdd">Что добавить в ваш %s?</string>
    <string name="cbSugar">Сахар</string>
    <string name="cbMilk">Молоко</string>
    <string name="cbLemon">Лимон</string>
    <string name="tvDrinkSpecific">Выберите тип напитка</string>
    <string name="btnMakeOrder">Сделать заказ</string>
    <string name="tvName_label">Имя:</string>
    <string name="tvDrink_label">Напиток:</string>
    <string name="tvDrinkType_label">Тип напитка:</string>
    <string name="tvAdditivies_label">Добавки:</string>
    <string name="Error_empty_name_or_password_in_signIn">Пожалуйста, введите имя и пароль</string>

    <array name="teaSpecific">
        <item>Чёрный</item>
        <item>Зелёный</item>
    </array>

    <array name="coffeeSpecific">
        <item>Американо</item>
        <item>Латте</item>
        <item>Капучино</item>
    </array>
</resources>